--- a/app/scss/component/_box.scss
+++ b/app/scss/component/_box.scss
@@ -92,13 +92,13 @@
         }
     }
     .image {
-        min-height: 310px;
+        min-height: 100%;
         z-index: -2;
         padding: 2px;
         img {
-            max-height: 310px;
+            max-height: 100%;
             width: 100%;
-            height: 310px;
+            height: 100%;
         }
     }
     .content {
